Bug 55044 - VIEWING of particular DRAW OLE object incomplete, pixel picture in it is missing
Summary: VIEWING of particular DRAW OLE object incomplete, pixel picture in it is missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: bibisected40 target:4.0.0.1 target:4.1.0
Keywords: regression
: 56808 59051 (view as bug list)
Depends on:
Blocks: OLE-Object-Interoperability mab4.0
  Show dependency treegraph
 
Reported: 2012-09-18 06:49 UTC by Rainer Bielefeld Retired
Modified: 2013-01-10 22:43 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (302.58 KB, application/vnd.oasis.opendocument.text)
2012-09-18 06:49 UTC, Rainer Bielefeld Retired
Details
Bibisect 4.0 output (2.77 KB, text/plain)
2012-12-15 12:17 UTC, Werner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-09-18 06:49:10 UTC
Created attachment 67312 [details]
Sample Document

Steps how to reproduce with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: b45834b]"  {tinderbox: @6, pull time 2012-09-13 00:10:35} on German WIN7 Home Premium (64bit):

Open attached sample document and compare view of OLE object in top right corner with view in 3.6.2.
Expected: same view as in 3.6.2 (see screenshot in document)
Actual: in object LibO Logo is missing.

Logo appears when you change to edit mode of OLE object (double click), but disappears again when you leave edit mode

Already [Reproducible] with unzipped MinGW Master "3.7.0.0.alpha+ [Build ID: 4deb9d4] English Locale/UI {Win-x86@7-MinGW   pull time 2012-08-31 05:20:19} on WIN7 Home Premium (64bit)

Was still ok  with unzipped MinGW Master "3.7.0.0.alpha+  – WIN7 Home Premium (64bit)  [Build ID: unknown] Win-x86@7-MinGW   pull time 2012-06-29 00:00:37)
Comment 1 Rainer Bielefeld Retired 2012-09-18 06:53:54 UTC
Problem indeed is limited to writer, object copy/pasted from "Sample.odt" to CALC works fine.
Comment 2 Rainer Bielefeld Retired 2012-09-18 07:05:24 UTC
And I can not reproduce the problem with an ad hoc DRAWING and a new WRITER sample, further investigation will be required
Comment 3 Korrawit Pruegsanusak 2012-11-17 14:45:44 UTC
Confirm on Windows 7 x64 Home Premium, with build from tinderbox Win-x86@6, pull time 2012-11-16 23:06:35, core: 4767bbb00dc9eacce6f6d60fd4c55107333cee2d

Also, NOT reproduce in 3.6 beta 1 on same computer => regression confirmed.

(In reply to comment #0)
> Logo appears when you change to edit mode of OLE object (double click), but
> disappears again when you leave edit mode

I can confirm this too.
Comment 4 Werner 2012-12-15 12:17:19 UTC
Created attachment 71547 [details]
Bibisect 4.0 output

Bug confirmed on Linux. Added output from Bibisect 4.0.
Comment 5 Michael Stahl 2012-12-21 12:26:45 UTC
regression caused by:

commit c0ce7ca4884f7f6d1016bd1dbcc22066cb4a7797
Author: Tomaž Vajngerl <quikee@gmail.com>
Date:   Sat Jul 7 13:07:03 2012 +0200

    Prescale image with Bitmap::Scale to improve quality.
    
    In OutputDevice, when sending the Bitmap to native renderer, use
    Bitmap::Scale operation to improve quality when doing sub-sampling.
    With this Bitmaps in certain Widgets will look a lot better.
    
    Cleanup and translate comments, and move sal_Bool to bool in outdev2.cxx
    
    Change-Id: Ice28537414e10b9e6b403df35c6104ffc7db7785
Comment 6 Michael Stahl 2012-12-21 13:01:29 UTC
ok that was surprisingly easy to fix, no knowledge of graphics necessary so even i could do it :)

perhaps it's not a good idea to mix functional changes and trivial cleanups in one commit...
Comment 7 Not Assigned 2012-12-21 13:04:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=edf54efa7f939be9b289f94ed4f19fb8322660ef&g=libreoffice-4-0

fdo#55044: OutputDevice::ImplDrawAlpha:


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Not Assigned 2012-12-21 13:05:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=06968a96afd334c276b425bf6b809c011f88b716

fdo#55044: OutputDevice::ImplDrawAlpha:



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2012-12-21 18:54:15 UTC
*** Bug 56808 has been marked as a duplicate of this bug. ***
Comment 10 Michael Stahl 2013-01-10 22:43:08 UTC
*** Bug 59051 has been marked as a duplicate of this bug. ***