fdo#55044: OutputDevice::ImplDrawAlpha:

reset members before calling GetBitmap(), as apparently they are used by
GetBitmap(), resulting in missing/not rendering parts of the preview
image in the bugdoc.

(regression from c0ce7ca4884f7f6d1016bd1dbcc22066cb4a7797)

Change-Id: I02a6abb822900e1a28a1c632a122c1e093b73553